--- a/faketwitter/Jenkinsfile
+++ b/faketwitter/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
 		stage ("Build") {
         	steps {
-            	sh './gradlew clean build'
+            	sh './faketwitter/gradlew clean build'
             }
         }
         stage ('Build docker image') {
