--- a/faketwitter/Jenkinsfile
+++ b/faketwitter/Jenkinsfile
@@ -4,7 +4,9 @@ pipeline {
     stages {
 		stage ("Build") {
         	steps {
-            	sh './faketwitter/gradlew clean build'
+                dir('/var/jenkins_home/workspace/faketwitter/faketwitter') {
+                    sh 'gradlew clean build'
+                }
             }
         }
         stage ('Build docker image') {
